--- a/playbooks/roles/drift/tasks/main.yaml
+++ b/playbooks/roles/drift/tasks/main.yaml
@@ -7,7 +7,7 @@
   when: node_name == target_node
 
 - name: write rsyncd password file
-  shell: echo "{{ rsync_secrets }}" > /tmp/pass
+  shell: etcdctl get /lain/config/rsyncd_secrets > /tmp/pass
   when: node_name == target_node
 
 - name: chmod password file
