--- a/playbooks/roles/node-recover/tasks/main.yaml
+++ b/playbooks/roles/node-recover/tasks/main.yaml
@@ -1,5 +1,5 @@
 - name: inspect docker network
-  inspect_docker_network: 
+  inspect_docker_network:
     app: "{{ recover_app }}"
     proc: "{{ recover_proc }}"
     instance_number: "{{ recover_instance_number }}"
@@ -18,11 +18,14 @@
 - name: remove dirty endpoint in docker directory of etcd
   shell: etcdctl rm /docker/network/v1.0/endpoint/{{ network_id }}/{{ endpoint_id }}
   ignore_errors: yes
+  when: is_lain_manager
 
 - name: remove dirty endpoint in calico directory of etcd
   shell: etcdctl rm /calico/v1/host/{{ recover_node }}/workload/libnetwork/libnetwork/endpoint/{{ endpoint_id }}
   ignore_errors: yes
+  when: is_lain_manager
 
 - name: recycle the used ip
   recycle_calico_ip:
     ip: "{{ recycle_ip }}"
+  when: is_lain_manager
