use calicoctl ipam cmd to replace self defined script

--- a/playbooks/roles/network-recover/tasks/main.yaml
+++ b/playbooks/roles/network-recover/tasks/main.yaml
@@ -26,6 +26,5 @@
   when: is_lain_manager
 
 - name: recycle the used ip
-  recycle_calico_ip:
-    ip: "{{ recycle_ip }}"
+  shell: calicoctl ipam release {{ recycle_ip }}
   when: is_lain_manager
