--- a/playbooks/roles/bootstrap-images/vars/main.yaml
+++ b/playbooks/roles/bootstrap-images/vars/main.yaml
@@ -3,21 +3,21 @@
 {
   "bootstrap_images": {
     "swarm": "swarm:1.2.5",
-    "rebellion": "rebellion:v2.3.0",
-    "pip_binary": "pip-binary:1495177245",
-    "deployd-binary": "deployd:2.0.3",
-    "lainlet": "lainlet:2.0.2",
-    "registry": "registry:release-1498029368-2c74d73cef3f020dd1dd6fcf9e1933112a2c67cc",
-    "registry-meta": "registry:meta-1498029368-2c74d73cef3f020dd1dd6fcf9e1933112a2c67cc",
-    "tinydns": "tinydns:release-1497423817-5c5982f1e53476478b74a28877bd878a30605b49",
-    "tinydns-meta": "tinydns:meta-1497423817-5c5982f1e53476478b74a28877bd878a30605b49",
-    "webrouter": "webrouter:release-1497430313-fa743a7d70301660065d6e636a18dab5fda3173c",
-    "webrouter-meta": "webrouter:meta-1497430313-fa743a7d70301660065d6e636a18dab5fda3173c",
-    "console": "console:release-1498028442-2801ed55f0293ce3b0f2ab3d10a36ad9cc456539",
-    "console-meta": "console:meta-1498028442-2801ed55f0293ce3b0f2ab3d10a36ad9cc456539",
-    "backupctl-meta": "backupctl:meta-1497618290-9f52077823a786fa0d6dd96eb63151213d55a28f",
-    "backupctl": "backupctl:release-1497618290-9f52077823a786fa0d6dd96eb63151213d55a28f",
-    "lvault-meta": "lvault:meta-1485154203-73072c92b1862ab470b8d872b278f734747b0739",
-    "lvault": "lvault:release-1485154203-73072c92b1862ab470b8d872b278f734747b0739"
+    "rebellion": "laincloud/rebellion:v2.3.0",
+    "pip_binary": "laincloud/pip-binary:1495177245",
+    "deployd-binary": "laincloud/deployd:2.0.3",
+    "lainlet": "laincloud/lainlet:2.0.2",
+    "registry": "laincloud/registry:release-1498029368-2c74d73cef3f020dd1dd6fcf9e1933112a2c67cc",
+    "registry-meta": "laincloud/registry:meta-1498029368-2c74d73cef3f020dd1dd6fcf9e1933112a2c67cc",
+    "tinydns": "laincloud/tinydns:release-1497423817-5c5982f1e53476478b74a28877bd878a30605b49",
+    "tinydns-meta": "laincloud/tinydns:meta-1497423817-5c5982f1e53476478b74a28877bd878a30605b49",
+    "webrouter": "laincloud/webrouter:release-1497430313-fa743a7d70301660065d6e636a18dab5fda3173c",
+    "webrouter-meta": "laincloud/webrouter:meta-1497430313-fa743a7d70301660065d6e636a18dab5fda3173c",
+    "console": "laincloud/console:release-1498028442-2801ed55f0293ce3b0f2ab3d10a36ad9cc456539",
+    "console-meta": "laincloud/console:meta-1498028442-2801ed55f0293ce3b0f2ab3d10a36ad9cc456539",
+    "backupctl-meta": "laincloud/backupctl:meta-1497618290-9f52077823a786fa0d6dd96eb63151213d55a28f",
+    "backupctl": "laincloud/backupctl:release-1497618290-9f52077823a786fa0d6dd96eb63151213d55a28f",
+    "lvault-meta": "laincloud/lvault:meta-1485154203-73072c92b1862ab470b8d872b278f734747b0739",
+    "lvault": "laincloud/lvault:release-1485154203-73072c92b1862ab470b8d872b278f734747b0739"
   }
 }
