--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ playbooks/roles/calico-upgrade/files/bin
 playbooks/roles/calico/files/bin
 playbooks/roles/networkd-upgrade/files
 playbooks/roles/networkd/files
+playbooks/roles/lainlet/files
+playbooks/roles/deployd/files
