--- a/playbooks/roles/lainlet/tasks/main.yaml
+++ b/playbooks/roles/lainlet/tasks/main.yaml
@@ -13,46 +13,26 @@
     - hedwig
     - streamrouter
 
-- name: check if lainlet container exists
-  command: docker inspect lainlet-binary
-  register: result
-  ignore_errors: yes
-  changed_when: False
+- name: copy lainlet binary file
+  copy:
+    src: lainlet
+    dest: /usr/bin/lainlet
+    force: yes
+    mode: a+x
 
-- name: create lainlet binary container
-  command: docker create --name lainlet-binary {{ lainlet_image }} /bin/bash
-  when: result|failed
+- name: generate lainlet.service
+  template:
+    src: lainlet.service.j2
+    dest: /etc/systemd/system/lainlet.service
 
-- name: copy lainlet binary to local /usr/bin
-  command: docker cp lainlet-binary:/usr/bin/lainlet /tmp/lainlet
+- name: systemctl daemon-reload
+  command: systemctl daemon-reload
 
-- name: remove the lainlet-binary container
-  command: docker rm -f lainlet-binary
-
-- name: get stat of old lainlet
-  stat: path=/usr/bin/lainlet
-  register: ostat
-  ignore_errors: yes
-
-- name: get stat of new lainlet
-  stat: path=/tmp/lainlet
-  register: nstat
-  ignore_errors: yes
-
-- name: stop lainlet service
-  service: name=lainlet state=stopped
-  when: ostat|failed or nstat|failed or "{{ostat.stat.md5|default('old')}}" != "{{nstat.stat.md5|default('new')}}"
-
-- name: update lainlet
-  shell: cp /tmp/lainlet /usr/bin/lainlet && chmod +x /usr/bin/lainlet
-  when: ostat|failed or nstat|failed or "{{ostat.stat.md5|default('old')}}" != "{{nstat.stat.md5|default('new')}}"
-
-- template: src=lainlet.service.j2 dest=/etc/systemd/system/lainlet.service
-  notify:
-    - reload systemd for lainlet
-    - restart lainlet
-- meta: flush_handlers
-- service: name=lainlet enabled=yes state=started
+- name: systemctl restart lainlet && systemctl enable lainlet
+  service:
+    name: lainlet
+    state: restarted
+    enabled: yes
 
 - name: set lainlet restart cron
   template: src=lainlet.cron.j2 dest=/etc/cron.d/lainlet.cron
