Add MySQL role for console (#142)
* Add MySQL role for console

* Fix mysql image and add mysql role to bootstrap-layer-0

--- a/playbooks/roles/bootstrap-images/vars/main.yaml
+++ b/playbooks/roles/bootstrap-images/vars/main.yaml
@@ -5,6 +5,7 @@
     "swarm": "swarm:1.2.5",
     "rebellion": "rebellion:v2.3.0",
     "pip_binary": "pip-binary:1495177245",
+    "mysql": "mysql-server:5.6.30",
     "registry": "registry:release-1498029368-2c74d73cef3f020dd1dd6fcf9e1933112a2c67cc",
     "registry-meta": "registry:meta-1498029368-2c74d73cef3f020dd1dd6fcf9e1933112a2c67cc",
     "tinydns": "tinydns:release-1497423817-5c5982f1e53476478b74a28877bd878a30605b49",
