cmd changed to calicoctl ipam release --ip (#149)

--- a/playbooks/roles/network-recover/tasks/main.yaml
+++ b/playbooks/roles/network-recover/tasks/main.yaml
@@ -27,5 +27,5 @@
   when: is_lain_manager and result|success
 
 - name: recycle the used ip
-  shell: calicoctl ipam release {{ recycle_ip }}
+  shell: calicoctl ipam release --ip {{ recycle_ip }}
   when: is_lain_manager and result|success
