make compatible with centos7.3

--- a/playbooks/roles/bootstrap-binary-stop/tasks/main.yaml
+++ b/playbooks/roles/bootstrap-binary-stop/tasks/main.yaml
@@ -14,7 +14,7 @@
 
 - name: stop deployd service
   service: name=deployd state=stopped
-  when: deployd|success
+  when: deployd.stat.exists
 
 - name: test if networkd binary path exists
   stat: path=/usr/bin/networkd
