--- a/playbooks/roles/consul/tasks/main.yaml
+++ b/playbooks/roles/consul/tasks/main.yaml
@@ -5,7 +5,7 @@
     force: yes
     mode: a+x
 
-- name: creates /etc/consul
+- name: mkdir /etc/consul
   file: path=/etc/consul state=directory
 
 - name: generate consul.json
