fix add node error

--- a/playbooks/roles/node/meta/main.yaml
+++ b/playbooks/roles/node/meta/main.yaml
@@ -6,6 +6,7 @@ dependencies:
   - role: firewall
   - role: dnsmasq
   - role: manager
+  - role: docker
   - role: calico
   - role: ssl
   - role: lainlet
