--- a/playbooks/roles/packages/tasks/main.yaml
+++ b/playbooks/roles/packages/tasks/main.yaml
@@ -1,7 +1,18 @@
-# install required system packages
-- name: test if pip-binary path exists
-  stat: path={{ pip_binary_path }}
-  register: result_path
+- name: install pip
+  yum: pkg=python-pip
 
-- include: install.yaml
-  when: not result_path.stat.exists
+- name: install python packages
+  command: pip install --upgrade --force-reinstall {{ item }}
+  with_items:
+    - pip
+    - python-dateutil==2.5.2
+    - python-etcd==0.4.3
+    - docker-py==1.8.0
+    - psutil==4.1.0
+    - requests==2.11.1
+  register: result
+  changed_when: "'Successfully installed' in result.stdout"
+
+- name: install lainctl
+  command: pip install --upgrade --force-reinstall lain-admin-cli==v2.0.3
+  when: bootstrapping is defined and bootstrapping|bool
